[package]
name = "statusping"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.3", features = ["blocking"] }
indicatif = "0.16.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
autojson = "0.1.0"
trust-dns-client = "0.20.3"